# MidiPluginTemplate

./: .gitignore  CMake.h.in  CMakeLists.txt  CMakeVars.h.in  README.md
JuceModules/: CMakeLists.txt
JuceModules/plugin_helpers/: plugin_helpers.cpp  plugin_helpers.h
JuceModules/plugin_helpers/AudioProcessorBase/: AudioProcessorBase.cpp  AudioProcessorBase.h
JuceModules/processing_code/: processing_code.cpp  processing_code.h
JuceModules/processing_code/WhiteNoise/: WhiteNoise.cpp  WhiteNoise.h
Modules/plugin_helpers/: plugin_helpers.h
Modules/plugin_helpers/AudioProcessorBase/: AudioProcessorBase.h
Source/: CMakeVars.h  Config.h  MidiPlugin.cpp  MidiPluginEditor.h  MidiPluginProcessor.h  MidiPluginTemplate.cpp  Plugin.cpp  TemplateEditor.h  TemplateProcessor.h
Source/Common/: CMakeVars.h  Config.h
Source/Plugin/: MidiPluginEditor.cpp  MidiPluginEditor.h  MidiPluginProcessor.cpp  MidiPluginProcessor.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: CPM.cmake
modules/AudioProcessorBase/: AudioProcessorBase.cpp  module.json
source/: Plugin.cpp
source/etc/: appConfig.h  cmakeVar.h
source/plugin/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
template/: cmakeVar.h.tpl
